# projector

./: .env.sh  .gitignore  .projector-path  AGENTS.md  CONFIG_PATH_SETUP.md  IMPLEMENTATION.md  INSTALLATION.md  Makefile  PROJECTOR_SELF_SETUP.md  PUSH_AND_PR_STEPS.md  QUICKREF.md  README.md  SAMPLES_OVERVIEW.md  example-checks.yaml  example-projector.yaml  package-lock.json  projector-self-config.yaml  pyproject.toml
.github/: PR_TEMPLATE.md
.github/workflows/: performance.yml
backlog/: config.yml
backlog/decisions/: decision-1-caching.md
backlog/tasks/: proj-1 - Cache-the-execution-result.md  proj-1-implementation-verification.md  proj-1.1 - Caching-both-for-runner-and-for-checks.md  proj-2 - Log-level-including-a-hierarchy-of-options.md  proj-3 - all-the-project-configuration-in-a-folder.md  proj-4 - help-on-error.md
mk/: backlog.mk
projector/: __init__.py  cache.py  cli.py  config.py  db.py  git.py  merge.py  models.py
projector/commands/: __init__.py  check.py  configure.py  init.py  init_checks.py  log.py  project.py  report.py  run.py  runner.py  status.py  sync.py  worktree.py
samples/: IMPLEMENTATION_GUIDE.md  README.md  checks-library.yaml  full-stack-app.yaml  microservices.yaml  minimal-examples.yaml  python-projects.yaml
tests/: E2E_TESTS.md  README.md  __init__.py  e2e_test.sh  test_cache_projectorignore.py  test_check_caching.py  test_config_e2e.py  test_version.py
