[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projector"
version = "0.1.0"
description = "A CLI tool for tracking software project health across multiple machines, worktrees, and commits"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Projector Contributors"}]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
proj = "projector.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pylint>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pylint>=3.0",
]

[tool.uv.sources]
# Any custom package sources can be defined here
